--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "geojson-extent": "^0.2.0",
     "geojson-normalize": "0.0.0",
     "s2": "^0.3.4"
+  },
+  "devDependencies": {
+    "tape": "^2.13.4"
   }
 }
