Move package to @mapbox namespace.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "geojson-cover",
+  "name": "@mapbox/geojson-cover",
   "version": "0.1.5",
   "description": "generates an s2 cover from geojson",
   "main": "index.js",
